修改假人的存储方式